mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: aperrin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:latest
        resources:
          requests:
            cpu: "200m"
            memory: "200Mi"
          limits:
            cpu: "500m"
            memory: "500Mi"
        ports:
        - containerPort: 27017
        livenessProbe:
          tcpSocket:
            port: 27017
          initialDelaySeconds: 20 
          periodSeconds: 10
          timeoutSeconds: 5     
          failureThreshold: 3 
          successThreshold: 1 
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: aperrin
spec:
  selector:
    app: mongodb
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
  type: ClusterIP
