webdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webdb-deployment
  namespace: aperrin
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webdb
  template:
    metadata:
      labels:
        app: webdb
    spec:
      containers:
      - name: webdb
        image: narcisseuuh/webdb:latest
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
          limits:
            cpu: "200m"
            memory: "200Mi"
        ports:
        - containerPort: 5066
        livenessProbe:
          httpGet:
            path: /
            port: 5066
          initialDelaySeconds: 15 
          periodSeconds: 10     
          timeoutSeconds: 5     
          failureThreshold: 3 
          successThreshold: 1 
---
apiVersion: v1
kind: Service
metadata:
  name: webdb-service
  namespace: aperrin
spec:
  selector:
    app: webdb
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5066
  type: ClusterIP
