webnodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webnodb-deployment
  namespace: aperrin
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webnodb
  template:
    metadata:
      labels:
        app: webnodb
    spec:
      containers:
      - name: webnodb
        image: narcisseuuh/webnodb:latest
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
          limits:
            cpu: "200m"
            memory: "200Mi"
        ports:
        - containerPort: 5067
---
apiVersion: v1
kind: Service
metadata:
  name: webnodb-service
  namespace: aperrin
spec:
  selector:
    app: webnodb
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5067
  type: ClusterIP
