ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webdb-webnodb-ingress
  namespace: aperrin
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: webdb.aperrin.net4255.luxbulb.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webdb-service
            port:
              number: 5066
  - host: webnodb.aperrin.net4255.luxbulb.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webnodb-service
            port:
              number: 5067
